--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     height: 1200px;
 }
 
-.header_menu {
+.header-menu {
     display: flex;
     align-items: center;
     padding-top: 60px;
@@ -29,7 +29,7 @@ body {
     margin: 0 125px 0 85px;
 }
 
-.main_nav-link {
+.main-nav__link {
     font-family: var(--main-font);
     font-weight: 600;
     font-size: 16px;
@@ -48,7 +48,7 @@ body {
 }
 
 
-.long-btn {
+.btn-long {
     font-family: var(--main-font);
     font-weight: 700;
     font-size: 20px;
@@ -68,7 +68,7 @@ body {
     -o-transition: 0.6s;
 }
 
-.long-btn:hover {
+.btn-long:hover {
     background: transparent;
     color: var(--main-color-3);
     transition: 0.3s;
@@ -115,7 +115,7 @@ body {
     margin: 0;
 }
 
-.small-btn {
+.btn-small {
     font-family: var(--main-font);
     font-weight: 700;
     font-size: 20px;
@@ -135,7 +135,7 @@ body {
     -o-transition: 0.3s;
 }
 
-.small-btn:hover {
+.btn-small:hover {
     color: var(--main-color-2);
     background: var(--main-color-3);
     transition: 0.6s;
@@ -143,4 +143,79 @@ body {
     -moz-transition: 0.6s;
     -ms-transition: 0.6s;
     -o-transition: 0.6s;
+}
+
+
+/* ----- advantage ------*/
+.advantage__title {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 55px;
+    text-align: center;
+    color: var(--main-color-1);
+    margin: 90px auto;
+}
+
+.advantage__block {
+    width: 1093px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.advantage__card {
+    display: flex;
+    align-items: center;
+    margin-bottom: 97px;
+}
+
+.advantage__card-square {
+    width: 100px;
+    height: 100px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+}
+
+.effective {
+    background: rgba(68, 140, 251, 0.1);
+}
+
+.cool {
+    background: rgba(230, 11, 11, 0.1);
+}
+
+.no-boring {
+    background: rgba(252, 188, 5, 0.1);
+}
+
+.interesting {
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.advantage__card-text {
+    max-width: 355px;
+}
+
+.advantage__card-title {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    color: var(--main-color-1);
+    margin: 0;
+}
+
+.advantage__card-desc {
+    font-family: var(--main-font);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--main-color-1);
+    margin: 8px 0 0;
 }
