--- a/style.css
+++ b/style.css
@@ -334,3 +334,37 @@ body {
     border-radius: 100px;
     z-index: -1;
 }
+
+/* ------ lessons-banner ------ */
+
+.lessons-banner {
+    height: 400px;
+    background: var(--main-color-5);
+    display: flex;
+    align-items: center;
+    margin-top: 230px;
+}
+
+.lessons-banner__block {
+    width: 741px;
+    height: 400px;
+    background: var(--main-color-2);
+    margin: 0 100px 0 0;
+    padding: 0 80px;
+    display: flex;
+    align-items: center;
+}
+
+.lessons-banner__block-img {
+    margin-top: 145px;
+
+}
+
+.lessons-banner__block-text {
+    max-width: 573px;
+    margin: 0 auto;
+}
+
+.lessons-banner__block__title {
+    line-height: 40px;
+}
