--- a/style.css
+++ b/style.css
@@ -532,3 +532,113 @@ body {
     max-width: 430px;
     margin: 0 auto;
 }
+
+
+/* ----- footer ------ */
+
+.footer {
+    background-color: var(--main-color-3);
+}
+
+.footer-container {
+    width: 1263px;
+    margin: 0 auto;
+    padding-top: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__items__wrap {
+    display: flex;
+    width: 910px;
+    justify-content: space-between;
+}
+
+.footer__item {
+    display: flex;
+    flex-direction: column;
+}
+
+.item-source {
+    display: flex;
+    flex-direction: column;
+}
+
+.item-name {
+    margin-bottom: 40px;
+}
+
+.item-name-link {
+    font-family: var(--main-font);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: var(--main-color-2);
+    text-decoration: none;
+}
+
+.footer-logo {
+    font-weight: 700;
+}
+
+.item-link {
+    font-family: var(--main-font);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--main-color-2);
+    margin-bottom: 10px;
+}
+
+.item-link:hover {
+    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+    -ms-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -o-transform: scale(1.03);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+
+.social-link:not(:last-child) {
+    margin-right: 24px;
+}
+
+.social-link img {
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+
+.social-link img:hover {
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+
+.copyright-text {
+    font-family: var(--main-font);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: 0.02em;
+    color: var(--main-color-2);
+    margin: 0;
+    padding: 80px 0 30px;
+    text-align: center;
+}
