--- a/style.css
+++ b/style.css
@@ -55,6 +55,29 @@ body {
     cursor: pointer;
 }
 
+.main-nav {
+    display: flex;
+}
+
+.main-nav a::after {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    display: block;
+    bottom: -2px;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+}
+
+.main-nav a:hover::after {
+    width: 100%;
+    background-color: var(--main-color-3);
+}
+
 .main-nav__link {
     font-family: var(--main-font);
     font-weight: 600;
@@ -64,6 +87,12 @@ body {
     color: var(--main-color-1);
     text-decoration: none;
     margin-right: 50px;
+    position: relative;
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    -webkit-transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    -moz-transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    -ms-transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    -o-transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .header-title {
